2016-11-26  Markus Gans  <guru.mail@muenster.de>
	* Add the opti-move test program
	* Optimized the terminal clear screen

2016-11-20  Markus Gans  <guru.mail@muenster.de>
	* Increase speed on cygwin terminals
	* Improve tty settings

2016-11-13  Markus Gans  <guru.mail@muenster.de>
	* Do not draw shadows on a linux console if not 
	  all characters are available

2016-11-12  Markus Gans  <guru.mail@muenster.de>
	* Better support for Linux terminals with 8 colors
	* Optimized input cursor positioning for terminals without 
	  hidden cursor
	* Switch locale name from "en_US" to "C"
	* Fix FString toLong()

2016-11-06  Markus Gans  <guru.mail@muenster.de>
	* The adjustment of xterm default colors now is configurable

2016-11-05  Markus Gans  <guru.mail@muenster.de>
	* Determine xterm maximum number of colors via OSC 4
	* The method clearArea can now fill the background 
	  with certain character

2016-11-03  Markus Gans  <guru.mail@muenster.de>
	* xterm should be able to use at least 16 colors

2016-11-01  Markus Gans  <guru.mail@muenster.de>
	* The class declaration now has a consistent order

2016-10-17  Markus Gans  <guru.mail@muenster.de>
	* Refactor the VGA attribute controller access code

2016-10-15  Markus Gans  <guru.mail@muenster.de>
	* Each virtual window gets its own virtual print cursor

2016-10-14  Markus Gans  <guru.mail@muenster.de>
	* Virtual windows can now store their own offset information
	* Correct implementation of the move() method

2016-10-13  Markus Gans  <guru.mail@muenster.de>
	* Reduces in the code the number of friend classes

2016-10-11  Markus Gans  <guru.mail@muenster.de>
	* Separate the virtual terminal into a own class vterm

2016-10-09  Markus Gans  <guru.mail@muenster.de>
	* Remove some duplicate code

2016-10-08  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to scroll text up and down 
	  in a virtual window

2016-10-06  Markus Gans  <guru.mail@muenster.de>