@@ -1,4 +1,5 @@
 2016-11-26  Markus Gans  <guru.mail@muenster.de>
+	* Improvements for ansi terminal emulators
 	* Add the opti-move test program
 	* Optimized the terminal clear screen
 
